force-app/main/default/objects/Nurse_Visit__c/Nurse_Visit__c.object-meta.xml
<CustomObject>
    <label>Nurse Visit</label>
    <pluralLabel>Nurse Visits</pluralLabel>
    <nameField>
        <displayFormat>NV-{00000}</displayFormat>
        <label>Nurse Visit Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>