force-app/main/default/objects/Nurse_Visit__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipName>NV_Drug</relationshipName>
    <relationshipLabel>Nurse Visits</relationshipLabel>
</CustomField>