force-app/main/default/objects/Nurse_Visit__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Nurse Visits</relationshipLabel>
    <relationshipName>Nurse_Visits</relationshipName><required>true</required>
</CustomField>