force-app/main/default/objects/Nurse_Visit__c/fields/REMS_Certified__c.field-meta.xml
<CustomField>
    <fullName>REMS_Certified__c</fullName><label>REMS Certified Nurse</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>