force-app/main/default/objects/Nurse_Visit__c/fields/Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes__c</fullName><label>Visit Notes</label><type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>