force-app/main/default/objects/Nurse_Visit__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName><label>Visit Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        <value><fullName>No Show</fullName><default>false</default><label>No Show</label></value>
    </valueSetDefinition></valueSet>
</CustomField>