force-app/main/default/objects/Nurse_Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName><label>Visit Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Injection Training</fullName><default>true</default><label>Injection Training</label></value>
        <value><fullName>Disease Education</fullName><default>false</default><label>Disease Education</label></value>
        <value><fullName>Home Infusion</fullName><default>false</default><label>Home Infusion</label></value>
        <value><fullName>Follow Up</fullName><default>false</default><label>Follow Up</label></value>
    </valueSetDefinition></valueSet>
</CustomField>